// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideNumber DOM sourcesCount > 1 static DOM should match snapshot 1`] = `
<div
  className="fslightbox-slide-number-lightboxContainer fslightbox-flex-centered"
>
  <div>
    7
  </div>
  <div
    className="fslightbox-slash"
  >
    /
  </div>
  <div>
    5
  </div>
</div>
`;

exports[`SlideNumber dom 1`] = `
<div
  className="fslightbox-slide-number-container fslightbox-flex-centered"
>
  <div>
    1
  </div>
  <div
    className="fslightbox-slash"
  >
    /
  </div>
  <div>
    4
  </div>
</div>
`;

exports[`SlideNumber dom should match snapshot 1`] = `
<div
  className="fslightbox-slide-number-container fslightbox-flex-centered"
>
  <div>
    1
  </div>
  <div
    className="fslightbox-slash"
  >
    /
  </div>
  <div>
    4
  </div>
</div>
`;
